-Création du /tbanlist -Création de l'interface

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: TeaModeration
 version: '${project.version}'
 main: fr.thibaultlombart.teamoderation.TeaModeration
 api-version: 1.20
+
+tbanlist:
+  description: "Command to see banned people in a gui"
+  permission: teamoderation.tbanlist
+  aliases: tbl
