- Ajout de l'accès à la base de donnée - Logs pour les unbans - Gestion des permissions dans les menus - Possibilité de cliquer sur une personne ban dans le /tbanlist pour le /unban

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,25 +26,50 @@ time:
   seconds: "seconds"
   permanently: "permanently"
 
+#For all guis
+page:
+  page: "Page"
+  next: "Next Page"
+  previous: "Previous Page"
+
+#In pardon Gui (when click on people ban in /tbanlist gui)
+pardon:
+  unban: "Unban"
+  cancel: "Cancel"
+  message: "{0} was unbanned."
+
 
 #Errors
 errors:
   basic: "You can't use this command, Please follow this Schema :"
+  permission: "You don't have this permission : {0}"
 
+#Schemas
+schema:
+  tbanlist: "/tbanlist"
+  tban: "/tban <player>"
+  tmute: "/tmute <player>"
+  tkick: "/tkick <player>"
 
+#Message when you are mute
 mute:
   by: "You have been muted by {0}"
   reason: "Reason : {0}"
   time: "for {0}" #Example: for 6 days
 
+#Message when you are ban
 ban:
   by: "You have been banned by {0}"
+  reason: "Reason : {0}"
   time-1: "Your ban will be removed on {0} at {1}"
   time-2: "for {0}" #Example: for 6 days
 
+#Message when you are kick
 kick:
   by: "You have been banned by {0}"
+  reason: "Reason : {0}"
 
+#Informations in banlist
 banlist:
   banned: "was banned"
   by: "By :"
